deployment/ingress_switch/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    namespace: networking
spec:
    ingressClassName: nginx
    rules:
    - host: localhost
      http:
        paths:
        - backend:
            service:
              name: api-svc-01.main.svc.cluster.local
              port:
                number: 8080
          path: /api
          pathType: Prefix
